--- a/about.html
+++ b/about.html
@@ -6,16 +6,20 @@
     <meta name="description" content="About our church">
     <title data-translate="about_title">Over Ons</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        * {
-            transition: opacity 0.3s ease;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Ethiopic:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
     <nav class="flex flex-wrap justify-between items-center p-4 shadow-md bg-white sticky top-0 z-50">
-        <div class="font-bold text-xl text-blue-700 mb-2 md:mb-0">Church Name</div>
+        <div class="flex items-center gap-3 mb-2 md:mb-0">
+            <a href="index.html" class="logo-container">
+                <img src="images/logo.png" alt="Abune Endrias Church Logo" class="logo-img" loading="eager">
+            </a>
+            <span class="font-bold text-xl text-blue-700" data-translate="church_name">Abune Endrias</span>
+        </div>
         
         <button id="mobile-menu-btn" class="md:hidden text-gray-700 hover:text-blue-700">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -50,9 +54,10 @@
     </section>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-12">
+    <main class="container mx-auto px-4 py-12 page-transition">
+        <div class="section-divider"></div>
         <div class="max-w-4xl mx-auto">
-            <div class="bg-white rounded-lg shadow-lg p-8">
+            <div class="bg-white rounded-lg shadow-lg p-8 fade-in card-hover">
                 <p class="text-lg text-gray-700 leading-relaxed mb-6" data-translate="about_content">
                     Onze kerk is een gemeenschap van christenen. We zijn toegewijd aan het dienen van Christus en het delen van het evangelie met anderen.
                 </p>
@@ -69,20 +74,26 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Church Name. All rights reserved.</p>
+            <!-- Social Media Icons -->
+            <div class="flex justify-center gap-4 mb-4">
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="YouTube">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                    </svg>
+                </a>
+            </div>
+            <p>&copy; 2025 <span data-translate="church_name">Abune Endrias</span>. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="js/translations.js"></script>
     <script src="js/language.js"></script>
-    <script>
-        document.getElementById('mobile-menu-btn').addEventListener('click', function() {
-            const menu = document.getElementById('nav-menu');
-            menu.classList.toggle('hidden');
-            menu.classList.toggle('flex');
-            menu.classList.add('flex-col', 'w-full', 'mt-4', 'gap-4');
-        });
-    </script>
+    <script src="js/utils.js"></script>
 </body>
 </html>
 
