--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="description" content="Church website with bilingual support (Tigrinya and Dutch)">
     <title data-translate="home_title">Welkom</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Smooth transitions */
-        * {
-            transition: opacity 0.3s ease;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Ethiopic:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
     <nav class="flex flex-wrap justify-between items-center p-4 shadow-md bg-white sticky top-0 z-50">
-        <div class="font-bold text-xl text-blue-700 mb-2 md:mb-0">Church Name</div>
+        <div class="flex items-center gap-3 mb-2 md:mb-0">
+            <a href="index.html" class="logo-container">
+                <img src="images/logo.png" alt="Abune Endrias Church Logo" class="logo-img" loading="eager">
+            </a>
+            <span class="font-bold text-xl text-blue-700" data-translate="church_name">Abune Endrias</span>
+        </div>
         
         <!-- Mobile menu button -->
         <button id="mobile-menu-btn" class="md:hidden text-gray-700 hover:text-blue-700">
@@ -46,51 +49,74 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-20 px-4">
-        <div class="container mx-auto text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4" data-translate="home_title">Welkom</h1>
-            <p class="text-xl md:text-2xl mb-8" data-translate="home_subtitle">Welkom bij onze kerk</p>
-            <div class="max-w-3xl mx-auto">
-                <p class="text-lg md:text-xl opacity-90" data-translate="home_description">Dit is de website van onze kerk. Hier kunt u informatie vinden over ons, onze missie, visie, leiders, diensten en andere informatie.</p>
+    <section class="relative text-white py-20 px-4 overflow-hidden min-h-[500px] md:min-h-[600px] flex items-center">
+        <!-- Background Image - different for mobile and desktop -->
+        <div class="absolute inset-0 bg-cover bg-center bg-no-repeat transition-all duration-1000 hero-bg-image"></div>
+        <!-- Gradient Overlay - darker on left (crucifixion/sad), lighter on right (resurrection/happy) -->
+        <div class="absolute inset-0 bg-gradient-to-r from-blue-900/85 via-blue-700/55 to-blue-400/5 md:from-blue-900/90 md:via-blue-700/60 md:to-blue-400/8"></div>
+        <!-- Additional subtle dark overlay - also gradient from left to right -->
+        <div class="absolute inset-0 bg-gradient-to-r from-black/35 via-black/18 to-transparent md:from-black/40 md:via-black/20 to-transparent"></div>
+        <!-- Content -->
+        <div class="container mx-auto text-center relative z-10 fade-in">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4 slide-in-left drop-shadow-lg" data-translate="home_title">Welkom</h1>
+            <p class="text-xl md:text-2xl mb-8 slide-in-right drop-shadow-md" data-translate="home_subtitle">Welkom bij onze kerk</p>
+            <div class="max-w-3xl mx-auto fade-in-delay-2">
+                <p class="text-lg md:text-xl opacity-95 drop-shadow-md leading-relaxed" data-translate="home_description">Dit is de website van onze kerk. Hier kunt u informatie vinden over ons, onze missie, visie, leiders, diensten en andere informatie.</p>
             </div>
         </div>
     </section>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-12">
+    <main class="container mx-auto px-4 py-12 page-transition">
         <div class="grid md:grid-cols-3 gap-8">
             <!-- About Card -->
-            <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-                <div class="text-blue-600 text-4xl mb-4">📖</div>
+            <div class="bg-white rounded-lg shadow-lg p-6 card-hover fade-in-delay-1">
+                <div class="text-blue-600 mb-4 icon-hover">
+                    <svg class="svg-icon w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                    </svg>
+                </div>
                 <h2 class="text-2xl font-bold mb-4" data-translate="about_title">Over Ons</h2>
                 <p class="text-gray-600 mb-4" data-translate="about_content">Onze kerk is een gemeenschap van christenen.</p>
-                <a href="about.html" class="text-blue-600 hover:text-blue-800 font-semibold">Lees meer →</a>
+                <a href="about.html" class="text-blue-600 hover:text-blue-800 font-semibold link-hover inline-block">Lees meer →</a>
             </div>
 
             <!-- Mission Card -->
-            <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-                <div class="text-blue-600 text-4xl mb-4">🎯</div>
+            <div class="bg-white rounded-lg shadow-lg p-6 card-hover fade-in-delay-2">
+                <div class="text-blue-600 mb-4 icon-hover">
+                    <svg class="svg-icon w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                </div>
                 <h2 class="text-2xl font-bold mb-4" data-translate="mission_title">Missie</h2>
                 <p class="text-gray-600 mb-4" data-translate="mission_content">Onze missie is om Christus te dienen.</p>
-                <a href="mission.html" class="text-blue-600 hover:text-blue-800 font-semibold">Lees meer →</a>
+                <a href="mission.html" class="text-blue-600 hover:text-blue-800 font-semibold link-hover inline-block">Lees meer →</a>
             </div>
 
             <!-- Vision Card -->
-            <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition">
-                <div class="text-blue-600 text-4xl mb-4">👁️</div>
+            <div class="bg-white rounded-lg shadow-lg p-6 card-hover fade-in-delay-3">
+                <div class="text-blue-600 mb-4 icon-hover">
+                    <svg class="svg-icon w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                    </svg>
+                </div>
                 <h2 class="text-2xl font-bold mb-4" data-translate="vision_title">Visie</h2>
                 <p class="text-gray-600 mb-4" data-translate="vision_content">Onze visie is om een bloeiende gemeenschap te zijn.</p>
-                <a href="vision.html" class="text-blue-600 hover:text-blue-800 font-semibold">Lees meer →</a>
+                <a href="vision.html" class="text-blue-600 hover:text-blue-800 font-semibold link-hover inline-block">Lees meer →</a>
             </div>
         </div>
 
+        <!-- Section Divider -->
+        <div class="section-divider mt-12"></div>
+
         <!-- Quick Links -->
         <div class="mt-12 grid md:grid-cols-2 gap-6">
-            <a href="church-leaders.html" class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition block">
+            <a href="church-leaders.html" class="bg-white rounded-lg shadow-lg p-6 card-hover block fade-in">
                 <h3 class="text-xl font-bold mb-2" data-translate="nav_church_leaders">Kerkleiders</h3>
                 <p class="text-gray-600">Ontmoet onze kerkleiders</p>
             </a>
-            <a href="sunday-school-leaders.html" class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition block">
+            <a href="sunday-school-leaders.html" class="bg-white rounded-lg shadow-lg p-6 card-hover block fade-in">
                 <h3 class="text-xl font-bold mb-2" data-translate="nav_sunday_school">Zondagsschool</h3>
                 <p class="text-gray-600">Ontmoet onze zondagsschool leiders</p>
             </a>
@@ -100,22 +126,27 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Church Name. All rights reserved.</p>
+            <!-- Social Media Icons -->
+            <div class="flex justify-center gap-4 mb-4">
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="YouTube">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                    </svg>
+                </a>
+            </div>
+            <p>&copy; 2025 <span data-translate="church_name">Abune Endrias</span>. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Scripts -->
     <script src="js/translations.js"></script>
     <script src="js/language.js"></script>
-    <script>
-        // Mobile menu toggle
-        document.getElementById('mobile-menu-btn').addEventListener('click', function() {
-            const menu = document.getElementById('nav-menu');
-            menu.classList.toggle('hidden');
-            menu.classList.toggle('flex');
-            menu.classList.add('flex-col', 'w-full', 'mt-4', 'gap-4');
-        });
-    </script>
+    <script src="js/utils.js"></script>
 </body>
 </html>
 
