--- a/yearbook.html
+++ b/yearbook.html
@@ -6,24 +6,20 @@
     <meta name="description" content="Yearbook">
     <title data-translate="yearbook_title">Jaarboek</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        * {
-            transition: opacity 0.3s ease;
-        }
-        .accordion-content {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease-out;
-        }
-        .accordion-content.open {
-            max-height: 2000px;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Ethiopic:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
     <nav class="flex flex-wrap justify-between items-center p-4 shadow-md bg-white sticky top-0 z-50">
-        <div class="font-bold text-xl text-blue-700 mb-2 md:mb-0">Church Name</div>
+        <div class="flex items-center gap-3 mb-2 md:mb-0">
+            <a href="index.html" class="logo-container">
+                <img src="images/logo.png" alt="Abune Endrias Church Logo" class="logo-img" loading="eager">
+            </a>
+            <span class="font-bold text-xl text-blue-700" data-translate="church_name">Abune Endrias</span>
+        </div>
         
         <button id="mobile-menu-btn" class="md:hidden text-gray-700 hover:text-blue-700">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -58,10 +54,10 @@
     </section>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-12">
+    <main class="container mx-auto px-4 py-12 page-transition">
         <div class="max-w-4xl mx-auto space-y-4">
             <!-- Year 2024 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden fade-in card-hover">
                 <button onclick="toggleAccordion('year2024')" class="w-full px-6 py-4 text-left bg-blue-600 text-white font-semibold flex justify-between items-center hover:bg-blue-700 transition">
                     <span data-translate="yearbook_year">Jaar</span>: 2024
                     <svg id="icon2024" class="w-5 h-5 transform transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -74,15 +70,21 @@
                         <p class="text-gray-700 mb-4">Dit jaar hebben we verschillende activiteiten georganiseerd, waaronder gemeenschapsbijeenkomsten, evangelisatie-evenementen en diensten.</p>
                         <div class="grid md:grid-cols-3 gap-4 mt-4">
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                         </div>
@@ -91,7 +93,7 @@
             </div>
 
             <!-- Year 2023 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden fade-in-delay-1 card-hover">
                 <button onclick="toggleAccordion('year2023')" class="w-full px-6 py-4 text-left bg-blue-600 text-white font-semibold flex justify-between items-center hover:bg-blue-700 transition">
                     <span data-translate="yearbook_year">Jaar</span>: 2023
                     <svg id="icon2023" class="w-5 h-5 transform transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -104,15 +106,21 @@
                         <p class="text-gray-700 mb-4">In 2023 hebben we ons gericht op gemeenschapsopbouw en discipelschap.</p>
                         <div class="grid md:grid-cols-3 gap-4 mt-4">
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                         </div>
@@ -121,7 +129,7 @@
             </div>
 
             <!-- Year 2022 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden fade-in-delay-2 card-hover">
                 <button onclick="toggleAccordion('year2022')" class="w-full px-6 py-4 text-left bg-blue-600 text-white font-semibold flex justify-between items-center hover:bg-blue-700 transition">
                     <span data-translate="yearbook_year">Jaar</span>: 2022
                     <svg id="icon2022" class="w-5 h-5 transform transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -134,15 +142,21 @@
                         <p class="text-gray-700 mb-4">2022 was een jaar van groei en vernieuwing voor onze gemeenschap.</p>
                         <div class="grid md:grid-cols-3 gap-4 mt-4">
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-4 text-center">
-                                <div class="text-4xl mb-2">📸</div>
+                                <svg class="w-12 h-12 text-gray-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                </svg>
                                 <p class="text-sm text-gray-600">Foto's</p>
                             </div>
                         </div>
@@ -155,12 +169,26 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Church Name. All rights reserved.</p>
+            <!-- Social Media Icons -->
+            <div class="flex justify-center gap-4 mb-4">
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="Facebook">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="YouTube">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                    </svg>
+                </a>
+            </div>
+            <p>&copy; 2025 <span data-translate="church_name">Abune Endrias</span>. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="js/translations.js"></script>
     <script src="js/language.js"></script>
+    <script src="js/utils.js"></script>
     <script>
         function toggleAccordion(yearId) {
             const content = document.getElementById(yearId);
@@ -171,13 +199,6 @@
                 icon.classList.toggle('rotate-180');
             }
         }
-
-        document.getElementById('mobile-menu-btn').addEventListener('click', function() {
-            const menu = document.getElementById('nav-menu');
-            menu.classList.toggle('hidden');
-            menu.classList.toggle('flex');
-            menu.classList.add('flex-col', 'w-full', 'mt-4', 'gap-4');
-        });
     </script>
 </body>
 </html>
