--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class="offcanvas-xxl offcanvas-end" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="navbarOffcanvasLabel" data-translate="church_name">Abune Endrias</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
