--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <!-- Navigation Links - Responsive offcanvas (xxl breakpoint) -->
-            <div class="offcanvas-xxl offcanvas-end" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
+            <!-- Navigation Links - Offcanvas for mobile/tablet -->
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="navbarOffcanvasLabel" data-translate="church_name">Abune Endrias</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
