Update home subtitle and translations
Changed the home page subtitle to 'Welkom bij Abune Endrias kerk' in index.html and updated corresponding translations in translations.js. Also corrected several Tigrinya translation strings for mission and yearbook pages.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container position-relative" style="z-index: 10;">
             <div class="text-center fade-in">
                 <h1 class="display-4 fw-bold mb-3 slide-in-left drop-shadow-lg" data-translate="home_title">Welkom</h1>
-                <p class="fs-4 mb-4 slide-in-right drop-shadow-md" data-translate="home_subtitle">Welkom bij onze kerk</p>
+                <p class="fs-4 mb-4 slide-in-right drop-shadow-md" data-translate="home_subtitle">Welkom bij Abune Endrias kerk</p>
                 <div class="mx-auto fade-in-delay-2" style="max-width: 800px;">
                     <p class="fs-5 opacity-95 drop-shadow-md lh-lg" data-translate="home_description">Dit is de website van onze kerk. Hier kunt u informatie vinden over ons, onze missie, visie, leiders, diensten en andere informatie.</p>
                 </div>
